--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Chuang Asia S2 Ranker</title>
+  <title>Chuang Asia Ranker</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
   <link rel="icon" type="image/png" href="/favicon.png">
@@ -23,7 +23,7 @@
 <body>
   <div id="top-banner">
     <img id="banner-image" src="assets/logo_white.png"/>
-    <p id="banner-title">CHUANG ASIA S2 RANKER</p>
+    <p id="banner-title">CHUANG ASIA RANKER</p>
     <p id="banner-subtitle">Make your own top 9!</p>
   </div>
   <div class="flex-container padded-box">
@@ -43,9 +43,9 @@
               <img class="table__entry-check" src="assets/check.png"/>
             </div>
             <div class="table__entry-text">
-              <strong><span class="name">Lee Gaeun</span></strong>
-              <span class="hangul">(이가은)</span>
-              <span class="company">PLEDIS ENTERTAINMENT</span>
+              <strong><span class="name">Gabi</span></strong>
+              <span class="hangul">(가비)</span>
+              <span class="company">unknown</span>
             </div>
           </div> -->
         </div>
@@ -80,8 +80,8 @@
             <div class="ranking__entry-icon-badge">1</div>
           </div>
           <div class="ranking__row-text">
-            <div class="name"><strong>Lee Gaeun</strong></div>
-            <div class="company">PLEDIS ENT.</div>
+            <div class="name"><strong>Gabi</strong></div>
+            <div class="company">unknown</div>
           </div>
         </div> -->
       </div>
